apps/notes-frontend/virtualservice-notes.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: notes-frontend
  namespace: default
spec:
  hosts:
    - "notes.test.stiforr.tech"
    - "wwww.notes.test.stiforr.tech"
  gateways:
    - istio-system/ingress-gateway
  http:
    - route:
        - destination:
            host: notes-frontend
            port:
              number: 80
